--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "youngs-bot",
     "version": "1.0.0",
     "description": "",
-    "main": "lib/src/index.js",
+    "main": "lib/index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
